fixed the issues with spacing on projects page

--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: center;
   align-items: center;
   gap: 16px;
   width:80%;
@@ -188,6 +189,7 @@ body {
   max-width: 420px;
   height: 420px;
   border-radius: 12px;
+  flex-shrink:0;
 
 }
 
